test/TestPhases/exportinference/invalid/importofinternal.blc

import i "../imports/internal"
import ni "../imports/notinternal"

module exposes aReturnsS // must be an internal module, because "internal" is necessary for the signature

activity aReturnsS (x: ni.S) returns i.S
    await true 
    return i.f()
end